Move squad of Units to a location

--- a/UnitFormation/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnitFormation/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,6 +162,16 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 SkeletalMeshComponent=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 BP_Unit_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 EdGraph=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+CapsuleComponent=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+WorldPartitionMiniMap=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+StaticMeshActor=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+BP_RTSCamera_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+SceneComponent=
+BP_Squad_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+PropertyWrapper=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+K2Node_VariableGet=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+BP_RPSController_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -176,7 +186,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/AI
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -195,7 +205,7 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Blackboard\" "
+Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -332,6 +342,10 @@ BTDecorator_Blackboard="\"Object\" "
 BTDecorator_BlackboardBase="\"Object\" "
 BTDecorator="\"Object\" "
 BTAuxiliaryNode="\"Object\" "
+BP_Unit_C=
+Character=
+Pawn=
+BP_Squad_C=
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -902,26 +916,55 @@ BlackboardData.Key=True
 BTDecorator_Blackboard.FlowControl=True
 BTDecorator_Blackboard.Blackboard=True
 BTDecorator_Blackboard.Description=True
+WorldPartitionMiniMap.WorldPartitionMiniMap=True
+WorldPartitionMiniMap.Networking=True
+BP_Squad_C.Pawn=True
+BP_Squad_C.Tick=True
+BP_Squad_C.Camera=True
+BP_Squad_C.Replication=True
+BP_Squad_C.Rendering=True
+BP_Squad_C.Collision=True
+BP_Squad_C.Actor=True
+BP_Squad_C.Input=True
+BP_Squad_C.HLOD=True
+BP_Squad_C.Physics=True
+BP_Squad_C.WorldPartition=True
+BP_Squad_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+BP_Squad_C.TransformCommon=True
+BP_Squad_C.Networking=True
+BP_RPSController_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BP_Unit.BP_Unit
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
-OpenAssetsAtExit=/Game/Blueprints/AI/BP_UnitController.BP_UnitController
+OpenAssetsAtExit=/Game/Blueprints/BP_Squad.BP_Squad
 OpenAssetsAtExit=/Game/Blueprints/BP_RPSController.BP_RPSController
-OpenAssetsAtExit=/Game/Blueprints/AI/BT_AiController.BT_AiController
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AI/Unit_Blackboard
-MRUItem1=/Game/Blueprints/AI/BT_AiController
-MRUItem2=/Game/Blueprints/BP_UnitController
-MRUItem3=/Game/Blueprints/BP_RPSController
-MRUItem4=/Game/Blueprints/BP_RTSCamera
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem6=/Game/TopDown/Blueprints/BP_Unit
-MRUItem7=/Game/Blueprints/Edge
-MRUItem8=/Game/Blueprints/BP_RTSGameMode
-MRUItem9=/Game/Blueprints/RTSGameMode
+MRUItem0=/Game/Blueprints/BP_RPSController
+MRUItem1=/Game/Blueprints/BP_RTSCamera
+MRUItem2=/Game/Blueprints/BP_Squad
+MRUItem3=/Game/Blueprints/AI/Unit_Blackboard
+MRUItem4=/Game/Blueprints/AI/BT_AiController
+MRUItem5=/Game/Blueprints/BP_UnitController
+MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem7=/Game/TopDown/Blueprints/BP_Unit
+MRUItem8=/Game/Blueprints/Edge
+MRUItem9=/Game/Blueprints/BP_RTSGameMode
+MRUItem10=/Game/Blueprints/RTSGameMode
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -934,6 +977,9 @@ GameMapsSettings=True
 /Game/Blueprints/BP_RTSCamera.BP_RTSCamera=0
 /Game/Blueprints/AI/Unit_Blackboard.Unit_Blackboard=0
 /Game/Blueprints/AI/BT_AiController.BT_AiController:Behavior Tree.BehaviorTreeGraphNode_Root_0=0
+/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
+/Game/Blueprints/AI/BP_UnitController.BP_UnitController=0
+/Game/Blueprints/AI/BT_AiController.BT_AiController=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -980,7 +1026,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
-RecentlyPlaced=/Game/TopDown/Blueprints/BP_Unit.BP_Unit;
+RecentlyPlaced=/Game/Blueprints/BP_Squad.BP_Squad;
+RecentlyPlaced=/Game/Blueprints/BP_Unit.BP_Unit;
 RecentlyPlaced=/Game/Blueprints/BP_RTSCamera.BP_RTSCamera;
 
 [SuppressableDialogs]
