Making a line formation

--- a/UnitFormation/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnitFormation/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,6 +172,8 @@ PropertyWrapper=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.C
 K2Node_VariableSet=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 K2Node_VariableGet=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 BP_RPSController_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+K2Node_Variable=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+K2Node_CallFunction=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
