Specify Formation Line Direction

--- a/UnitFormation/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnitFormation/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,11 +162,11 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 SkeletalMeshComponent=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 BP_Unit_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 EdGraph=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
-CapsuleComponent=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+CapsuleComponent=
 WorldPartitionMiniMap=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 StaticMeshActor=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 BP_RTSCamera_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 BP_Squad_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 PropertyWrapper=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 K2Node_VariableSet=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
@@ -174,6 +174,7 @@ K2Node_VariableGet=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physic
 BP_RPSController_C=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 K2Node_Variable=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
 K2Node_CallFunction=SpringArmComponent.TransformCommon.Transform,BP_Unit_C.Physics.ConstraintsGroup,
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -207,7 +208,7 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -339,7 +340,7 @@ BTTask_MoveTo="\"Object\" "
 BTTask_BlackboardBase="\"Object\" "
 BTTaskNode="\"Object\" "
 BlackboardData="\"Object\" \"Object.Blackboard\" "
-DataAsset="\"Object\" \"Object.Blackboard\" "
+DataAsset="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" "
 BTDecorator_Blackboard="\"Object\" "
 BTDecorator_BlackboardBase="\"Object\" "
 BTDecorator="\"Object\" "
@@ -348,6 +349,8 @@ BP_Unit_C=
 Character=
 Pawn=
 BP_Squad_C=
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" "
+InputAction="\"Object\" \"Object.Action.Triggers\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -948,6 +951,10 @@ K2Node_CustomEvent.Inputs=True
 BP_Squad_C.TransformCommon=True
 BP_Squad_C.Networking=True
 BP_RPSController_C.Default=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
+InputAction.Description=True
+InputAction.Action=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -956,17 +963,19 @@ OpenAssetsAtExit=/Game/Blueprints/BP_Squad.BP_Squad
 OpenAssetsAtExit=/Game/Blueprints/BP_RPSController.BP_RPSController
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_RPSController
-MRUItem1=/Game/Blueprints/BP_RTSCamera
-MRUItem2=/Game/Blueprints/BP_Squad
-MRUItem3=/Game/Blueprints/AI/Unit_Blackboard
-MRUItem4=/Game/Blueprints/AI/BT_AiController
-MRUItem5=/Game/Blueprints/BP_UnitController
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem7=/Game/TopDown/Blueprints/BP_Unit
-MRUItem8=/Game/Blueprints/Edge
-MRUItem9=/Game/Blueprints/BP_RTSGameMode
-MRUItem10=/Game/Blueprints/RTSGameMode
+MRUItem0=/Game/TopDown/Input/IMC_Default
+MRUItem1=/Game/TopDown/Input/Actions/IA_SetDestination_Click
+MRUItem2=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem3=/Game/Blueprints/BP_RPSController
+MRUItem4=/Game/Blueprints/BP_RTSCamera
+MRUItem5=/Game/Blueprints/BP_Squad
+MRUItem6=/Game/Blueprints/AI/Unit_Blackboard
+MRUItem7=/Game/Blueprints/AI/BT_AiController
+MRUItem8=/Game/Blueprints/BP_UnitController
+MRUItem9=/Game/TopDown/Blueprints/BP_Unit
+MRUItem10=/Game/Blueprints/Edge
+MRUItem11=/Game/Blueprints/BP_RTSGameMode
+MRUItem12=/Game/Blueprints/RTSGameMode
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -982,6 +991,8 @@ GameMapsSettings=True
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
 /Game/Blueprints/AI/BP_UnitController.BP_UnitController=0
 /Game/Blueprints/AI/BT_AiController.BT_AiController=0
+/Game/TopDown/Input/IMC_Default.IMC_Default=0
+/Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
